<resources>
    <string name="app_name">newsmth</string>

    <!--Activity Main-->
    <string name="navigation_preference">Preference</string>
    <string name="navigation_menu1">menu1</string>
    <string name="navigation_menu2">menu2</string>
    <string name="navigation_menu3">menu3</string>
    <string name="navigation_menu4">menu4</string>
    <string name="navigation_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toast_exit">Tap again to exit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!--night mode-->
    <string name="visit_mode_title">Visit mode</string>
    <string name="visit_mode_key" translatable="false">settings_visit_mode_key</string>
    <string name="visit_mode_nforum" translatable="false">0</string>
    <string name="visit_mode_www2" translatable="false">1</string>

    <!--night mode-->
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary_on">Enabled</string>
    <string name="night_mode_summary_off">Disabled</string>
    <string name="night_mode_key" translatable="false">settings_night_mode_key</string>



    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
