<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/settings">
        <item
            android:id="@+id/navigation_preference"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_preference"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/navigation_menu1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_menu1"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/navigation_menu2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_menu2"
            app:showAsAction="ifRoom|withText" />
    </group>

    <group android:id="@+id/others">
        <item
            android:id="@+id/navigation_menu3"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/navigation_menu3"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/navigation_menu4"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navigation_menu4"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_about"
            app:showAsAction="ifRoom|withText" />
    </group>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navigation_menu3"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_menu5"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/navigation_menu3"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_menu6"
        android:icon="@drawable/ic_update_black_24dp"
        android:title="@string/navigation_menu4"
        app:showAsAction="ifRoom|withText" />

</menu>